--- a/src/app.css
+++ b/src/app.css
@@ -12,3 +12,19 @@ body,
 html {
   height: -webkit-fill-available;
 }
+
+.animate-pop {
+  animation: pop 0.1s cubic-bezier(0.36, 0.07, 0.19, 0.97) both;
+}
+
+@keyframes pop {
+  10%,
+  90% {
+    transform: scale(1.1);
+  }
+
+  40%,
+  60% {
+    transform: scale(0.9);
+  }
+}
