--- a/src/app.css
+++ b/src/app.css
@@ -9,6 +9,10 @@ body,
   min-height: -webkit-fill-available;
   touch-action: manipulation;
 }
+body.standalone,
+body.standalone #svelte  {
+  min-height: 100vh;
+}
 
 html {
   height: -webkit-fill-available;
