--- a/src/app.css
+++ b/src/app.css
@@ -65,3 +65,14 @@ body.standalone #svelte  {
 html {
   @apply h-svh;
 }
+
+:root {
+  --animate-delay: 0.3s;
+}
+
+.animate__animated.animate__delay-6s {
+  -webkit-animation-delay: calc(1s * 6);
+  animation-delay: calc(1s * 6);
+  -webkit-animation-delay: calc(var(--animate-delay) * 6);
+  animation-delay: calc(var(--animate-delay) * 6);
+}
